# dunelegacy-richiesbranch

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  SoftwareDesign.txt  ToDo.txt  aclocal.m4  builddebug.sh  configure  configure.ac  dunelegacy-0.96.1.ebuild  dunelegacy.nsi  dunelegacy.spec
IDE/codeblocks/: dunelegacy.cbp
IDE/xCode/: MacFunctions.m
IDE/xCode/Dune Legacy.xcodeproj/: project.pbxproj
data/: Dune2-Versions.txt  LEGACY.PAK
data/maps/multiplayer/: 2P - 32x32 - X-Factor.ini
data/maps/singleplayer/: 2P - 64x64 - North vs. South.ini
debian/: changelog  control
include/: AStarSearch.h  BulletClass.h  Choam.h  Command.h  CommandManager.h  ConcatIterator.h  DataTypes.h  Definitions.h  Explosion.h  Game.h  GameINILoader.h  GameInitSettings.h  GameInterface.h  House.h  MapClass.h  MapEditor.h  MapGenerator.h  MapSeed.h  ObjectClass.h  ObjectData.h  ObjectManager.h  ObjectPointer.h  RadarView.h  ScreenBorder.h  SoundPlayer.h  TerrainClass.h  config.h  data.h  globals.h  main.h  mmath.h  sand.h
include/CutScenes/: Intro.h
include/FileClasses/: Animation.h  BriefingText.h  FileManager.h  Fntfile.h  Font.h  FontManager.h  GFXManager.h  INIFile.h  Icnfile.h  IndexedTextFile.h  Pakfile.h  PictureFactory.h  PictureFont.h  SFXManager.h  Shpfile.h  TextManager.h  Wsafile.h
include/FileClasses/adl/: sound_adlib.h
include/FileClasses/music/: ADLPlayer.h  DirectoryPlayer.h  MusicPlayer.h  XMIPlayer.h
include/GUI/: Button.h  CallbackTarget.h  Checkbox.h  ClickMap.h  Container.h  DropDownBox.h  GUIStyle.h  HBox.h  InvisibleButton.h  Label.h  ListBox.h  MessageBox.h  MethodPointer.h  PictureButton.h  PictureLabel.h  ProgressBar.h  ScrollBar.h  Spacer.h  StaticContainer.h  SymbolButton.h  TextBox.h  TextButton.h  VBox.h  Widget.h  Window.h
include/GUI/ObjectInterfaces/: BuilderInterface.h  DefaultObjectInterface.h  DefaultStructureInterface.h  MultiUnitInterface.h  PalaceInterface.h  RefineryAndSiloInterface.h  (+3 more)
include/Menu/: AboutMenu.h  BriefingMenu.h  CustomGameMenu.h  CustomGamePlayers.h  GameStatsMenu.h  HouseChoiceInfoMenu.h  HouseChoiceMenu.h  MainMenu.h  MapChoice.h  MentatHelp.h  MentatMenu.h  MenuClass.h  OptionsMenu.h  SinglePlayerMenu.h  SinglePlayerSkirmishMenu.h
include/Trigger/: ReinforcementTrigger.h  TimeoutTrigger.h  Trigger.h  TriggerManager.h
include/misc/: FileStream.h  FileSystem.h  MemoryStream.h  Random.h  RobustList.h  Stream.h  draw_util.h  memory.h  sound_util.h  string_util.h
include/players/: AIPlayer.h  HumanPlayer.h  Player.h
include/structures/: BarracksClass.h  BuilderClass.h  ConstructionYardClass.h  GunTurretClass.h  HeavyFactoryClass.h  HighTechFactoryClass.h  IXClass.h  LightFactoryClass.h  PalaceClass.h  RadarClass.h  RefineryClass.h  RepairYardClass.h  RocketTurretClass.h  SiloClass.h  StarPortClass.h  StructureClass.h  TurretClass.h  WORClass.h  WallClass.h  WindTrapClass.h
include/units/: AirUnit.h  Carryall.h  DevastatorClass.h  DeviatorClass.h  FremenClass.h  Frigate.h  GroundUnit.h  HarvesterClass.h  InfantryClass.h  LauncherClass.h  MCVClass.h  Ornithopter.h  QuadClass.h  RaiderClass.h  Saboteur.h  SandWorm.h  SardaukarClass.h  SiegeTankClass.h  SoldierClass.h  SonicTankClass.h  TankBaseClass.h  TankClass.h  TrackedUnit.h  TrikeClass.h  TrooperClass.h  UnitClass.h
src/: AStarSearch.cpp  BulletClass.cpp  Choam.cpp  Command.cpp  CommandManager.cpp  Explosion.cpp  Game.cpp  GameINILoader.cpp  GameInitSettings.cpp  GameInterface.cpp  House.cpp  Makefile.am  Makefile.in  MapClass.cpp  MapEditor.cpp  MapGenerator.cpp  MapSeed.cpp  ObjectClass.cpp  ObjectData.cpp  ObjectManager.cpp  ObjectPointer.cpp  RadarView.cpp  ScreenBorder.cpp  SoundPlayer.cpp  TerrainClass.cpp  main.cpp  mmath.cpp  sand.cpp
src/CutScenes/: CrossBlendVideoEvent.cpp  CutScene.cpp  FadeInVideoEvent.cpp  FadeOutVideoEvent.cpp  Finale.cpp  HoldPictureVideoEvent.cpp  Intro.cpp  Meanwhile.cpp  TextEvent.cpp  WSAVideoEvent.cpp
src/FileClasses/: Animation.cpp  BriefingText.cpp  FileManager.cpp  Fntfile.cpp  FontManager.cpp  GFXManager.cpp  INIFile.cpp  Icnfile.cpp  IndexedTextFile.cpp  Pakfile.cpp  PictureFactory.cpp  PictureFont.cpp  SFXManager.cpp  Shpfile.cpp  TextManager.cpp  Vocfile.cpp  Wsafile.cpp
src/FileClasses/adl/: sound_adlib.cpp
src/FileClasses/music/: ADLPlayer.cpp  DirectoryPlayer.cpp  XMIPlayer.cpp
src/GUI/: Button.cpp  DropDownBox.cpp  GUIStyle.cpp  ListBox.cpp  ScrollBar.cpp  Widget.cpp  Window.cpp
src/GUI/dune/: BuilderList.cpp  ChatManager.cpp  DuneStyle.cpp  InGameMenu.cpp  InGameSettingsMenu.cpp  LoadSaveWindow.cpp  MessageTicker.cpp  NewsTicker.cpp
src/Menu/: AboutMenu.cpp  BriefingMenu.cpp  CustomGameMenu.cpp  CustomGamePlayers.cpp  GameStatsMenu.cpp  HouseChoiceInfoMenu.cpp  HouseChoiceMenu.cpp  MainMenu.cpp  MapChoice.cpp  MentatHelp.cpp  MentatMenu.cpp  MenuClass.cpp  OptionsMenu.cpp  SinglePlayerMenu.cpp  SinglePlayerSkirmishMenu.cpp
src/Trigger/: ReinforcementTrigger.cpp  TimeoutTrigger.cpp  TriggerManager.cpp
src/misc/: FileStream.cpp  FileSystem.cpp  draw_util.cpp  fnkdat.cpp  md5.cpp  string_util.cpp
src/players/: AIPlayer.cpp  HumanPlayer.cpp  Player.cpp
src/structures/: BarracksClass.cpp  BuilderClass.cpp  ConstructionYardClass.cpp  GunTurretClass.cpp  HeavyFactoryClass.cpp  HighTechFactoryClass.cpp  IXClass.cpp  LightFactoryClass.cpp  PalaceClass.cpp  RadarClass.cpp  RefineryClass.cpp  RepairYardClass.cpp  RocketTurretClass.cpp  SiloClass.cpp  StarPortClass.cpp  StructureClass.cpp  TurretClass.cpp  WORClass.cpp  WallClass.cpp  WindTrapClass.cpp
src/units/: AirUnit.cpp  Carryall.cpp  DevastatorClass.cpp  DeviatorClass.cpp  FremenClass.cpp  Frigate.cpp  GroundUnit.cpp  HarvesterClass.cpp  InfantryClass.cpp  LauncherClass.cpp  MCVClass.cpp  Ornithopter.cpp  QuadClass.cpp  RaiderClass.cpp  Saboteur.cpp  SandWorm.cpp  SardaukarClass.cpp  SiegeTankClass.cpp  SoldierClass.cpp  SonicTankClass.cpp  TankBaseClass.cpp  TankClass.cpp  TrackedUnit.cpp  TrikeClass.cpp  TrooperClass.cpp  UnitClass.cpp
tests/: Makefile.am  Makefile.in
tests/INIFileTestCase/: INIFileTestCase2.cpp
(+10 files in other folders)
