bin_PROGRAMS = dunelegacy
dunelegacy_SOURCES =  AStarSearch.cpp\
                      BulletClass.cpp\
                      Choam.cpp\
                      Command.cpp\
                      CommandManager.cpp\
                      Explosion.cpp\
                      Game.cpp\
                      GameINILoader.cpp\
                      GameInitSettings.cpp\
                      GameInterface.cpp\
                      House.cpp\
                      MapClass.cpp\
                      MapEditor.cpp\
                      MapGenerator.cpp\
                      MapSeed.cpp\
                      globals.cpp\
                      main.cpp\
                      mmath.cpp\
                      ObjectClass.cpp\
                      ObjectData.cpp\
                      ObjectManager.cpp\
                      ObjectPointer.cpp\
                      RadarView.cpp\
                      ScreenBorder.cpp\
                      sand.cpp\
                      SoundPlayer.cpp\
                      TerrainClass.cpp\
                      $(NULL)\
                      CutScenes/CutScene.cpp\
                      CutScenes/Scene.cpp\
                      CutScenes/Intro.cpp\
                      CutScenes/Meanwhile.cpp\
                      CutScenes/Finale.cpp\
                      CutScenes/VideoEvent.cpp\
                      CutScenes/WSAVideoEvent.cpp\
                      CutScenes/FadeOutVideoEvent.cpp\
                      CutScenes/FadeInVideoEvent.cpp\
                      CutScenes/HoldPictureVideoEvent.cpp\
                      CutScenes/CrossBlendVideoEvent.cpp\
                      CutScenes/TextEvent.cpp\
                      CutScenes/CutSceneTrigger.cpp\
                      $(NULL)\
                      misc/draw_util.cpp\
                      misc/FileSystem.cpp\
                      misc/FileStream.cpp\
                      misc/fnkdat.cpp\
                      misc/md5.cpp\
                      misc/sound_util.cpp\
                      misc/string_util.cpp\
                      $(NULL)\
                      GUI/Button.cpp\
                      GUI/GUIStyle.cpp\
                      GUI/Widget.cpp\
                      GUI/Window.cpp\
                      GUI/ScrollBar.cpp\
                      GUI/ListBox.cpp\
                      GUI/DropDownBox.cpp\
                      $(NULL)\
                      GUI/dune/ChatManager.cpp\
                      GUI/dune/DuneStyle.cpp\
                      GUI/dune/LoadSaveWindow.cpp\
                      GUI/dune/InGameMenu.cpp\
                      GUI/dune/InGameSettingsMenu.cpp\
                      GUI/dune/NewsTicker.cpp\
                      GUI/dune/MessageTicker.cpp\
                      GUI/dune/BuilderList.cpp\
                      $(NULL)\
                      FileClasses/INIFile.cpp\
                      FileClasses/FileManager.cpp\
                      FileClasses/GFXManager.cpp\
                      FileClasses/SFXManager.cpp\
                      FileClasses/FontManager.cpp\
                      FileClasses/TextManager.cpp\
                      FileClasses/Pakfile.cpp\
                      FileClasses/Decode.cpp\
                      FileClasses/Fntfile.cpp\
                      FileClasses/Cpsfile.cpp\
                      FileClasses/SaveWAV.cpp\
                      FileClasses/Shpfile.cpp\
                      FileClasses/Icnfile.cpp\
                      FileClasses/Vocfile.cpp\
                      FileClasses/Wsafile.cpp\
                      FileClasses/Palfile.cpp\
                      FileClasses/Animation.cpp\
                      FileClasses/BriefingText.cpp\
                      FileClasses/IndexedTextFile.cpp\
                      FileClasses/PictureFactory.cpp\
                      FileClasses/PictureFont.cpp\
                      FileClasses/adl/sound_adlib.cpp\
                      FileClasses/adl/opl_dosbox.cpp\
                      FileClasses/adl/opl_mame.cpp\
                      FileClasses/adl/fmopl.cpp\
                      FileClasses/xmidi/xmidi.cpp\
                      FileClasses/music/ADLPlayer.cpp\
                      FileClasses/music/DirectoryPlayer.cpp\
                      FileClasses/music/XMIPlayer.cpp\
                      $(NULL)\
                      Menu/MenuClass.cpp\
                      Menu/MainMenu.cpp\
                      Menu/SinglePlayerMenu.cpp\
                      Menu/SinglePlayerSkirmishMenu.cpp\
                      Menu/CustomGameMenu.cpp\
                      Menu/CustomGamePlayers.cpp\
                      Menu/OptionsMenu.cpp\
                      Menu/AboutMenu.cpp\
                      Menu/HouseChoiceMenu.cpp\
                      Menu/MentatMenu.cpp\
                      Menu/BriefingMenu.cpp\
                      Menu/HouseChoiceInfoMenu.cpp\
                      Menu/MentatHelp.cpp\
                      Menu/MapChoice.cpp\
                      Menu/GameStatsMenu.cpp\
                      $(NULL)\
                      Trigger/TriggerManager.cpp\
                      Trigger/ReinforcementTrigger.cpp\
                      Trigger/TimeoutTrigger.cpp\
                      $(NULL)\
                      players/Player.cpp\
                      players/HumanPlayer.cpp\
                      players/AIPlayer.cpp\
                      $(NULL)\
                      structures/StructureClass.cpp\
                      structures/BuilderClass.cpp\
                      structures/TurretClass.cpp\
                      structures/BarracksClass.cpp\
                      structures/ConstructionYardClass.cpp\
                      structures/GunTurretClass.cpp\
                      structures/HeavyFactoryClass.cpp\
                      structures/HighTechFactoryClass.cpp\
                      structures/IXClass.cpp\
                      structures/LightFactoryClass.cpp\
                      structures/PalaceClass.cpp\
                      structures/RadarClass.cpp\
                      structures/RefineryClass.cpp\
                      structures/RepairYardClass.cpp\
                      structures/RocketTurretClass.cpp\
                      structures/SiloClass.cpp\
                      structures/StarPortClass.cpp\
                      structures/WindTrapClass.cpp\
                      structures/WallClass.cpp\
                      structures/WORClass.cpp\
                      $(NULL)\
                      units/UnitClass.cpp\
                      units/AirUnit.cpp\
                      units/GroundUnit.cpp\
                      units/InfantryClass.cpp\
                      units/TrackedUnit.cpp\
                      units/TankBaseClass.cpp\
                      units/Carryall.cpp\
                      units/DevastatorClass.cpp\
                      units/DeviatorClass.cpp\
                      units/FremenClass.cpp\
                      units/Frigate.cpp\
                      units/HarvesterClass.cpp\
                      units/LauncherClass.cpp\
                      units/MCVClass.cpp\
                      units/QuadClass.cpp\
                      units/SiegeTankClass.cpp\
                      units/SonicTankClass.cpp\
                      units/TankClass.cpp\
                      units/TrikeClass.cpp\
                      units/TrooperClass.cpp\
                      units/Ornithopter.cpp\
                      units/RaiderClass.cpp\
                      units/Saboteur.cpp\
                      units/SandWorm.cpp\
                      units/SardaukarClass.cpp\
                      units/SoldierClass.cpp\
                      $(NULL)

AM_CPPFLAGS = -DDUNELEGACY_DATADIR='"$(dunelegacydatadir)"' -I$(top_srcdir)/include
